# Wiki-Sync-Obsidian

./: .gitattributes  .gitignore  README.md  bootstrap-wiki.cmd  bootstrap-wiki.sh  pg-oidc-proxy.py
.githooks/: pre-push
bootstrap-profiles/minimal/: profile.sh
bootstrap-profiles/multi-site-operations/: profile.sh
bootstrap-profiles/on-call-operations/: profile.sh
bootstrap-profiles/project-wiki/: profile.sh
scripts/: create-release-archive.mjs  install-git-hooks.cmd  install-git-hooks.sh
wiki-helper/: README.md  pyproject.toml  requirements.txt
wiki-helper/schema/: 001_privacy_retrieval.sql
wiki-helper/src/wiki_helper/: __init__.py  app.py  chunking.py  config.py  db.py  embeddings.py  mcp_server.py  privacy.py  search.py
wiki-helper/tests/: test_app.py  test_config.py  test_presidio.py  test_privacy.py  test_schema.py
wiki-sync/: LICENSE  NOTICE  build-release.mjs  eslint.config.mjs  main.js  manifest.json  package-lock.json  package.json
wiki-sync/templates/: AGENTS.md  CLAUDE.md  GEMINI.md
wiki-sync/templates/skills/canvas/: SKILL.md
wiki-sync/templates/skills/homepage/: SKILL.md
wiki-sync/templates/skills/obsidian-bases/: SKILL.md
wiki-sync/templates/skills/obsidian-markdown/: SKILL.md
wiki-sync/templates/skills/oncall/: SKILL.md
wiki-sync/templates/skills/save/: SKILL.md
wiki-sync/templates/skills/wiki/: SKILL.md
wiki-sync/templates/skills/wiki-ingest/: SKILL.md
wiki-sync/templates/skills/wiki-lint/: SKILL.md
wiki-sync/templates/skills/wiki-query/: SKILL.md
