[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wiki-helper"
version = "0.1.0"
description = "Local privacy and retrieval helper for Wiki Sync."
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2,<4",
]

[project.optional-dependencies]
presidio = [
    "presidio-analyzer>=2.2",
    "spacy>=3.7",
]

[project.scripts]
wiki-helper = "wiki_helper.app:main"

[tool.setuptools.packages.find]
where = ["src"]

